--- a/burger_builder/package.json
+++ b/burger_builder/package.json
@@ -11,7 +11,8 @@
     "react-router": "^4.3.1",
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.8",
-    "redux": "^4.0.1"
+    "redux": "^4.0.1",
+    "redux-form": "^8.2.0"
   },
   "scripts": {
     "start": "react-scripts start",
